# switchdns

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: dns.rs  main.rs  ui.rs
