[package]
name = "switchdns"
version = "0.1.3"
edition = "2021"
authors = ["Mahyar Riazati <mhyrzt@gmail.com>"]
description = "A CLI tool to switch DNS settings easily."
license = "MIT"
repository = "https://github.com/mhyrzt/switchdns"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dirs = "6.0.0"
is-root = "0.1.3"
ratatui = "0.29.0"
thiserror = "2.0.12"
users = "0.11.0"

[[bin]]
name = "switchdns"
path = "src/main.rs"
